5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1795_3139.log
== SUBMITION (2019-05-30 16:37:18) 
-- CODE:
vetor=array(int(input('Digite')))
a=vetor[i]**(1/3)
b=len(vetor)
m=a/len
n=m***3
print(n)
-- EXECUTION TIME:
0.143641
-- ERROR:
  File "/home/codebench/codes/1795/3139/main.py", line 5
    n=m***3
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:39) 
-- CODE:
vetor=array(int(input('Digite')))
a=vetor[i]**(1/3)
b=len(vetor)
m=a/len
n=m***3
print(a)
print(n)
-- ERROR:
File "XXXX", line 5
    n=m***3
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:52) 
-- CODE:
vetor=array(int(input('Digite')))
a=vetor[i]**(1/3)
b=len(vetor)
m=a/len
n=m**3
print(a)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vetor=array(int(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:12) 
-- CODE:
from numpy import 8
vetor=array(int(input('Digite')))
a=vetor[i]**(1/3)
b=len(vetor)
m=a/len
n=m**3
print(a)
print(n)
-- ERROR:
File "XXXX", line 1
    from numpy import 8
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:38:14) 
-- CODE:
from numpy import 8
vetor=array(int(input('Digite')))
a=vetor[i]**(1/3)
b=len(vetor)
m=a/len
n=m**3
print(a)
print(n)
-- EXECUTION TIME:
0.197344
-- ERROR:
  File "/home/codebench/codes/1795/3139/main.py", line 1
    from numpy import 8
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:19) 
-- CODE:
from numpy import *
vetor=array(int(input('Digite')))
a=vetor[i]**(1/3)
b=len(vetor)
m=a/len
n=m**3
print(a)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:37) 
-- CODE:
from numpy import *
vetor=array(int(input('Digite')))
i=0
a=vetor[i]**(1/3)
b=len(vetor)
m=a/len
n=m**3
print(a)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
